--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,3 +13,5 @@ AppliedDefaultGraphicsPerformance = Maximum
 +ActiveGameNameRedirects = (OldGameName="TP_Blank",NewGameName="/Script/UnrealLibrary")
 +ActiveGameNameRedirects = (OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealLibrary")
 +ActiveClassRedirects = (OldClassName="TP_BlankGameModeBase",NewClassName="UnrealLibraryGameModeBase")
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/UnrealLibrary.FirstPersonCharacter",NewName="/Script/UnrealLibrary.PlayerCharacter")
